# Data-Structures-and-Algorithms

DataStructures/: CMakeLists.txt  main.cpp
DataStructures/BinaryTree/SimpleBinaryTree/: BinaryTree.cpp  BinaryTree.h  Iterators.h
DataStructures/DynamicArray/: DynamicArray.cpp  DynamicArray.h  DynamicArrayIterator.cpp  DynamicArrayIterator.h
DataStructures/Hashtable/CoalescedChaining/: CoalescedChaining.cpp  CoalescedChaining.h  CoalescedChainingIterator.cpp  CoalescedChainingIterator.h
DataStructures/Hashtable/OffeneAddresierung/DoubleHashing/: OffeneAddresierungDoubleHashing.cpp  OffeneAddresierungDoubleHashing.h
DataStructures/Hashtable/OffeneAddresierung/LinearProbing/: OffeneAddresierungIterator.cpp  OffeneAddresierungIterator.h  OffeneAddressierung.cpp  OffeneAddressierungLinearProbing.h
DataStructures/Hashtable/OffeneAddresierung/QuadraticProbing/: OffeneAddresierungQuadraticProbing.cpp  OffeneAddresierungQuadraticProbing.h  OffeneAddresierungQuadraticProbingIterator.cpp  OffeneAddresierungQuadraticProbingIterator.h
DataStructures/Hashtable/UnabhangigeVerkettung/: UnabhangigeVekettung.cpp  UnabhangigeVekettung.h  UnabhangigeVerkettungIterator.cpp  UnabhangigeVerkettungIterator.h
DataStructures/LinkedList/DLL/: DLL.cpp  DLL.h  DLL_Iterator.cpp  DLL_Iterator.h
DataStructures/LinkedList/SLL/: SLL.cpp  SLL.h  SLL_Iterator.cpp  SLL_Iterator.h
DataStructures/LinkedListOnArrays/DLLA/: DLLA.cpp  DLLA.h  DLLAIterator.cpp  DLLAIterator.h
DataStructures/LinkedListOnArrays/SLLA/: SLLA.cpp  SLLA.h  SLLAIterator.cpp  SLLAIterator.h
Labor/Labor3/: App.cpp  CMakeLists.txt
Labor/Labor3/Postfix/: postfix.cpp
Labor/Labor3/Postfix/PostfixConversion/: PostFixConversion.cpp  PostFixConversion.h
Labor/Labor3/Postfix/PostfixEvaluation/: PostfixEvaluation.cpp
Labor/Labor3/PostfixConversion/: PostFixConversion.cpp
Labor/Labor3/Queue/: Queue.cpp  Queue.h
Labor/Labor3/Stack/: Stack.cpp  Stack.h
Labor/Labor3/Tests/: test.cpp  test.h
Labor/Labor3/Tests/StackTest/: StackTest.h
Labor/Labor3/Tests/TestPostFixConversion/: testPostfixConversion.cpp
Labor/Labor3/Tests/TestQueue/: ExtendedTest.cpp  ShortTest.cpp
Labor/Labor3/Tests/TestStack/: StackTest.cpp
Labor/labor2/: App.cpp  CMakeLists.txt  Robot.h  RobotInLabyrinth.cpp  RobotInLabyrinth.h  input.txt
Labor/labor2/IO/: IO.cpp  IO.h  input1.txt  input3.txt  input4.txt  input6.txt  input7.txt
Labor/labor2/LinkedList/: LinkedList.cpp  LinkedList.h
Labor/labor2/LinkedList/LinkedListTest/: LinkedListTest.cpp  LinkedListTest.h
Labor/labor2/LinkedList/Node/: Node.cpp  Node.h
Labor/labor2/LocationQueue/: Location.cpp  Location.h  LocationQueue.cpp  LocationQueue.h  Queue.cpp  Queue.h
Labor/labor2/LocationQueue/Location/: Location.cpp  Location.h
Labor/labor2/Queue/: Queue.cpp  Queue.h
Labor/labor2/Queue/QueueTest/: ExtendedTest.cpp  ShortTest.cpp
Labor/labor2/Queue/QueueTests/: ExtendedTest.cpp  ShortTest.cpp
Labor/labor2/Robot/: Robot.cpp  Robot.h  RobotSetup.cpp  RobotSetup.h
Labor/labor2/SolveLabyrinth/: SolveLabyrinth.cpp  SolveLabyrinth.h
Labor/labor2/Stack/: Stack.cpp  Stack.h
Labor/labor2/Tests/: TestAllFunctionalities.cpp  TestAllFunctionalities.h
Labor/labor2/Tests/LocationQueueTests/: LocationQueueTests.cpp  LocationQueueTests.h
Labor/labor2/Tests/LocationTests/: LocationTests.cpp  LocationTests.h
Labor/labor2/Tests/QueueTest/: ExtendedTest.cpp  ShortTest.cpp
LinkedList/QueueDLL/: CMakeLists.txt
LinkedList/QueueDLL/IO/: input2.txt  input5.txt
LinkedList/QueueDLL/Queue/: Queue.cpp
LinkedList/QueueDLL/SolveLabyrinth/: SolveLabyrinth.h
LinkedList/QueueDLL/Stack/: Stack.h
LinkedListOnArrays/QueueDLLA/: CMakeLists.txt
LinkedListOnArrays/QueueDLLA/Postfix/: postfix.h
LinkedListOnArrays/QueueDLLA/Queue/: Queue.cpp
LinkedListOnArrays/QueueDLLA/Stack/: Stack.cpp  Stack.h
(+223 files in other folders)
